--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
             <div class="container ">
                 <div class="row justify-content-center text-center ">
                     <div class="col-12 col-md-8 col-lg-8 align-items-center mb-5 pb-5 text-h1">
-                        <h4>HELLO, WELCOME TO</h4>
+                        <h4>Oseias Edgar Manuel Dias</h4>
                         <h1>ELEGANCE</h1>
                         <p>This is a clean and modern HTML5 template with a video background. You can use this layout
                             for
